# project

./: ARCHITECTURE.md  PROJECT_REPORT.md  hpylori_colab_training.py  hpylori_training.ipynb  nixpacks.toml  railway.json
backend/: .env  .env.example  audit_logger.py  main.py  model_training.py  pyproject.toml  render.yaml  requirements.txt  wsgi.py
backend/api/: hello.py
backend/data/: notifications.json  patients.json  reports.json  tests.json  users.json
frontend/: .env.example  index.html  netlify.toml  vite.config.js
frontend/public/: _redirects  manifest.json  sw.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: AuditLogs.jsx  BackupExport.jsx  Login.jsx  NewTest.jsx  PatientLogin.jsx  PatientPortal.jsx  PatientProfile.jsx  PatientScanResult.jsx  Patients.jsx  Sessions.jsx
frontend/src/services/: api.js
