[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpylori-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "numpy==1.26.4",
    "reportlab==4.1.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.9.0",
    "httpx==0.26.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "qrcode[pil]==7.4.2",
    "scikit-learn==1.4.2"
]

[tool.uv]
lock = false